styles/style.css
.material-icons {
    font-size: 42px;
    cursor: pointer;
}

.bg-info {
    background-color: #0f71fa !important;
}

.btn-success{
    background-color: #0f71fa !important;
    border: none !important;
}

.btn-danger {
    background-color: #6c757d !important;
    border: none !important;
}

* {
    font-family: 'Josefin Sans', sans-serif;
    font-family: 'Young Serif', serif;
}

.current_location {
    padding-bottom: 10px;
    /* not showing padding because of the map height */
}

.container {
    position: relative;
    width: 100%;
    /* max-width: 400px; */
}

.container img {
    width: 100%;
    height: auto;
}

.container .back-btn {
    position: absolute;
    top: 15%;
    left: 12%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    background-color: #0b75af;
    color: white;
    font-size: 20px;
    padding: 12px 24px;
    border: none;
    cursor: pointer;
    border-radius: 100px;
    text-align: center;
}

.container .btn:hover {
    background-color: whitesmoke;
    color: #0b75af;
}

#list_see_more:hover {
    color: black;
}

.dropdown {
    margin-left: 10px;
}

#list_dropdown {
    margin-top: 10px;
    text-align: end;
}

a {
    text-decoration: none;
}

#current_location {
    margin: 10px;
    height: 40px;
    align-items: center;
    font-size: 1rem;
}

#search_location {
    margin: 10px !important;
    width: 95%;
}

#my_location_icon{
    color: #0f71fa;
}

#go_map_view{
    margin-left: 10px;
    margin-top: 5px;
    font-size: 3rem;
    color: #0f71fa;
}

.card {
    margin: 10px !important;
}

.list_cards {
    display: auto !important;
}

/* move the get-directions button not covered by the footer */
.get-directions {
    margin-bottom: 120px;
}

.reviewing {
    color: black;
}

.date {
    font-size: 1rem;
}

h3,
h4 {
    color: black;

}

.card-text {
    font-size: 38px;
}

.highlighted {
    font-weight: bold;
    color: #0b75af;
    margin-left: 10px;
    margin-right: 10px;

}

.card-image {
    height: 400px !important;
}

#vancouver_drinking_fountains-go-here{
    margin-bottom: 100px;
}

.review_box .card {
    width: 400px;
    display: flex;
}

#main_photo {
    margin: auto;
}

#write_review_button {
    margin-left: 10px;
    margin-right: 10px;

}

